# hemingwei

./: .buildinfo  .editorconfig  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  markdown-notebooks.doctree  notebooks.doctree
.doctrees/notes/: ode_runge_kutta.doctree
_sources/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/casual_inference/: 1-random-controlled-trials.ipynb  1_random_controlled_trials.ipynb
_sources/notes/: ode_runge_kutta.ipynb  special_relativity.ipynb
_sources/notes/casual_inference/: 1_random_controlled_trials.ipynb
casual_inference/: 1-random-controlled-trials.html  1_random_controlled_trials.html
hemingway/: _config.yml  _toc.yml  conf.py
hemingway/_build/.doctrees/: environment.pickle  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
hemingway/_build/.jupyter_cache/: global.db
hemingway/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  search.html  searchindex.js
hemingway/_build/jupyter_execute/: notebooks.ipynb
hemingway/notes/: bezier_curves.ipynb  ode_finite_difference_methods.ipynb  ode_runge_kutta.ipynb  rank_simulator_gaussian.ipynb  taste_controller.ipynb
notes/: bezier_curves.html  ode_finite_difference_methods.html  ode_runge_kutta.html  rank_simulator_gaussian.html  special_relativity.html  taste_controller.html
notes/casual_inference/: 1_random_controlled_trials.html
(+29 files in other folders)
